--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
 	implementation project(':domain')
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.projectlombok:lombok'
 }
