--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,20 +1,16 @@
 server.port=9992
 management.server.port=9993
 
-jdbc.driverClassName=org.h2.Driver
-jdbc.url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1
-jdbc.user=admin
-jdbc.pass=admin
-
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/hms_app_db?serverTimezone=UTC
+jdbc.user=hms_app_db
+jdbc.pass=hms_app_db
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 
 server.error.include-message=always
 health.logger.fixed.delay.milliseconds=3000000000
 enable.health.status.meter=false
-
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
