--- a/build.gradle
+++ b/build.gradle
@@ -45,5 +45,7 @@ subprojects {
 		implementation enforcedPlatform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
 
 		implementation "org.springframework.boot:spring-boot-starter-log4j2"
+
+		implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
 	}
 }
