--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,11 +1,22 @@
-server.port=9994
-management.server.port=9994
+server.port=8080
+management.server.port=8081
 
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+
+#docker
 jdbc.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/hms_app_db?serverTimezone=UTC
-jdbc.user=hms_app_db
+jdbc.user=root
+
+#docker from local
+#jdbc.url=jdbc:mysql://${MYSQL_HOST:localhost}:33090/hms_app_db?serverTimezone=UTC
+#jdbc.user=root
+
+#local
+#jdbc.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/hms_app_db?serverTimezone=UTC
+#jdbc.user=hms_app_db
+
 jdbc.pass=hms_app_db
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
